# LearningGraphics

./: .gitignore  Readme.md
darwin_opengl/: CMakeLists.txt  shader.frag  shader.vert  simple.cpp
dmabuf-client/: .gitignore  Makefile  dmabuf_logo.c  dmabuf_logo_immed.c  test_dmabuf.c
dmabuf-test/: Makefile  test_prime.c
drm/: .editorconfig  Makefile  deviceptr.c  drm-connector-test.c  intel-gpu-blit.c  lmem.c  modeset-atomic-gbm.c  modeset-lmem-deviceptr.c
opengl/10-normal-maps/: .gitignore  CMakeLists.txt  brick.frag  brick.vert  shader.frag  shader.vert  skybox.cpp
opengl/10-normal-maps/include/: model.h  utils.h
opengl/9-model/: image.cpp  image.h  shader.frag  shader.h  shader.vert  skybox.cpp  skybox.vert
opengl/lighting/: shader.frag  simple.cpp  utils.h
opengl/lighting-wayland/: CMakeLists.txt  simple.cpp  utils.h
opengl/lighting-wayland/include/glad/: glad.h
opengl/movement/: CMakeLists.txt  shader.frag  shader.vert  simple.cpp
opengl/simple/: CMakeLists.txt  simple.cpp
opengl/simple-wayland/: CMakeLists.txt  shader.vert  simple.cpp
opengl/skybox/: CMakeLists.txt  Session.vim  main.cpp  shader.h  skybox.frag
opengl/skybox/include/: log.h  shader.h
opengl/skybox/src/: glad.c
opengl/texture/: application.h  shader.frag  shader.vert  simple.cpp
opengl/transform/: shader.frag  shader.vert  simple.cpp
vulkan_test/: .gitignore  Makefile  hello_triangle.cpp
x11/: .gitignore  Makefile  basic.c  menu  menu.c  moving.c
